--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "qs": "~0.5.6",
     "json-stringify-safe": "~4.0.0",
     "extend": "git://github.com/segmentio/extend",
-    "hyperquest": "git://github.com/calvinfo/hyperquest#add-getters"
+    "hyperquest": "git://github.com/calvinfo/hyperquest#add-getters",
+    "async": "~0.2.7"
   },
   "devDependencies": {
     "mime": "~1.2.9"
